[package]
name = "clockwork-handlebars"
version = "0.1.0"
authors = ["Layl <LaylConway@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
handlebars = {version = "0.20.2", features = ["serde_type"]}
serde = "^0.8.0"
serde_macros = "^0.8.0"
webapp = {git = "https://github.com/carbidegames/webapp.git"}
clockwork = {git = "https://github.com/carbidegames/clockwork.git"}
